#./api_shit/Cargo.toml
[package]
name = "api_shit"
version = "0.1.0"
edition = "2021"

[dependencies]
# Your dependencies here
reqwest = { version = "0.11.23", features = ["json", "gzip"] }
thiserror = "1.0.56"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
dotenv = "0.15.0"
